--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -5,7 +5,7 @@
 \input{Context}
 \input{Permutations}
 \input{Process}
-% \input{Congruence}
+\input{Congruence}
 % \input{Reduction}
 % \input{DeadlockFreedom}
 % \input{Safety}
