--- a/paper/Congruence.tex
+++ b/paper/Congruence.tex
@@ -105,12 +105,20 @@ repeatedly, we will focus on just a few representative rules starting from
 \end{code}
 
 The constructor \AgdaInductiveConstructor{s-comm} models the commutativity
-property of parallel composition. We use \AgdaFunction{dual-symm} and
-\AgdaFunction{+-comm} to compute the proofs of the relation
-$\AgdaDatatype{Dual}~B~A$ and of the splitting $\ContextC \simeq \Context_2 +
-\Context_1$ from $d$ and $p$ respectively.
-
-implicit rewriting
+property of parallel composition. We use \AgdaFunction{+-comm} to compute the
+proof of the splitting $\Splitting\ContextC{\Context_2}{\Context_1}$ from $p$
+respectively.
+%
+Notice that this constructor also makes key use of the implicit rewriting rule
+\AgdaFunction{dual-inv} described in \Cref{sec:type-agda}. Indeed $P$ and $Q$
+have type $\AgdaDatatype{Process}~(A~\AgdaInductiveConstructor{∷}~\Context_1)$
+and
+$\AgdaDatatype{Process}~(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷}~\Context_2)$,
+respectively, but the \AgdaInductiveConstructor{cut} on the r.h.s. of
+\AgdaInductiveConstructor{⊒} expects $P$ to have type
+$\AgdaFunction{dual}~(\AgdaFunction{dual}~A)$. Thanks to
+\AgdaFunction{dual-inv}, Agda considers these types equivalent without requiring
+intricate substitutions in the index of a data type.
 
 \begin{code}[hide]%
 %
@@ -253,20 +261,20 @@ The constructor \AgdaInductiveConstructor{s-wait} models the \SWait rule:
 \end{code}
 
 There are two non-trivial aspects worth commenting. The first one concerns the
-proof $(\AgdaInductiveConstructor{split-r}~q)$ used in the
+proof $(\AgdaInductiveConstructor{>}~q)$ used in the
 \AgdaInductiveConstructor{wait} process before structural precongruence is
 applied. To understand the meaning of this proof, we must recall three key
 elements:
 \begin{enumerate}
   \item
-    $(\AgdaInductiveConstructor{wait}~(\AgdaInductiveConstructor{split-r}~q)~P)$
-    is a direct sub-process of the \AgdaInductiveConstructor{cut}, and therefore
-    it is meant to be well typed in the context
+    $(\AgdaInductiveConstructor{wait}~(\AgdaInductiveConstructor{>}~q)~P)$ is a
+    direct sub-process of the \AgdaInductiveConstructor{cut}, and therefore it
+    is meant to be well typed in the context
     $A~\AgdaInductiveConstructor{∷}~\Context_1$.
   \item Being a \AgdaInductiveConstructor{wait} process, such context must
     contain a $\Bot$ type as per the typing rule \WaitRule. That is
-    $A~\AgdaInductiveConstructor{∷}~\Context_1 \simeq [\Bot] +
-    A~\AgdaInductiveConstructor{∷}~\Delta$ for some $\Delta$.
+    $\Splitting{A~\AgdaInductiveConstructor{∷}~\Context_1}{[\Bot]}{A~\AgdaInductiveConstructor{∷}~\ContextD}$
+    for some $\ContextD$.
   \item The \SWait rule is applicable only provided that the channel restricted
     by the cut (say $x$, of type $A$) is different from the channel (say $y$, of
     type $\Bot$) consumed by the \AgdaInductiveConstructor{wait} process.
@@ -275,7 +283,7 @@ elements:
     in front of $A~\AgdaInductiveConstructor{∷}~\Context_1$ necessarily comes
     from the right component of the splitting $[\Bot] +
     A~\AgdaInductiveConstructor{∷}~\Delta$ through the use of
-    \AgdaInductiveConstructor{split-r}.
+    \AgdaInductiveConstructor{>}.
 \end{enumerate}
 
 The other aspect that is worth commenting concerns the rearrangement of the
@@ -289,10 +297,9 @@ associativity property of context splitting which we called
 application $\AgdaFunction{+-assoc-l}~p~q$ and to extract the new proofs $p'$
 and $q'$ for the rearranged splittings.
 
-The constructors \AgdaInductiveConstructor{s-select-l} and
-\AgdaInductiveConstructor{s-select-r} model \SSelect when the selected tag is
-respectively \AgdaInductiveConstructor{true} and
-\AgdaInductiveConstructor{false}.
+The constructors \AgdaInductiveConstructor{s-left} and
+\AgdaInductiveConstructor{s-right} model \SSelect when the selected tag is
+respectively $\Tag_1$ and $\Tag_2$.
 
 \begin{code}[hide]%
 %
@@ -502,28 +509,28 @@ respectively \AgdaInductiveConstructor{true} and
 \end{code}
 
 Here the process
-$(\AgdaInductiveConstructor{select}~\AgdaInductiveConstructor{true}~(\AgdaInductiveConstructor{split-r}~q)~P)$,
-which is found under a cut for $x : A$, is using some channel $y : C \Plus D$ to
-send the tag $\AgdaInductiveConstructor{true}$.
+$(\AgdaInductiveConstructor{left}~(\AgdaInductiveConstructor{>}~q)~P)$, which is
+found under a cut for $x : A$, is using some channel $y : B \Plus C$ to send the
+tag $\Tag_1$.
 %
 Unlike \AgdaInductiveConstructor{wait}, which consumes the channel it operates
 on, the continuation process $P$ will be using a fresh continuation channel $z :
-C$. Therefore, $P$ is required to be well typed in the context
-$C~\AgdaInductiveConstructor{∷}~A~\AgdaInductiveConstructor{∷}~\ContextD$, where
+B$. Therefore, $P$ is required to be well typed in the context
+$B~\AgdaInductiveConstructor{∷}~A~\AgdaInductiveConstructor{∷}~\ContextD$, where
 the type of the continuation sits on top of the type of the restricted channel.
 %
-After structural precongruence is applied, however, the type $C$ of the
+After structural precongruence is applied, however, the type $B$ of the
 continuation channel $z$ ends up underneath that of the restricted channel $x$,
 because now the two channels are introduced in the opposite order. Therefore, we
 are in a situation where we need to turn $P$ into a process that is well typed
 in the context
-$A~\AgdaInductiveConstructor{∷}~C~\AgdaInductiveConstructor{∷}~\ContextD$. This
-is achieved applying the function \AgdaFunction{\#process} to the
-\AgdaInductiveConstructor{\#here} permutation, which swaps the two topmost types
+$A~\AgdaInductiveConstructor{∷}~B~\AgdaInductiveConstructor{∷}~\ContextD$. This
+is achieved applying the function \AgdaFunction{↭process} to the
+\AgdaInductiveConstructor{swap} permutation, which swaps the two topmost types
 in a typing context, and finally to the process $P$.
 
-\emph{En passant}, we also show the modeling of the \SForkL rule, which is
-interesting because of its complex side conditions:
+We also show the modeling of the \SForkL rule, which is interesting because of
+its complex side conditions:
 
 \begin{code}[hide]%
 %
@@ -1245,7 +1252,7 @@ $(\AgdaInductiveConstructor{>}~r)$.
 \end{code}
 
 Finally, in \Cref{sec:semantics} we have colloquially defined $\pcong$ as a
-``\emph{pre-congruence}'', implicitly implying that it is reflexive, transitive,
+``\emph{pre-congruence}'', implying that it is reflexive, transitive relation
 and that it is is preserved by some forms of calculus. In the formalization we
 have to be precise and we introduce specific rules:
 
